only one .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,63 @@
 Makefile
 *.flac
+*.o
+*.obj
+*.a
+*.exe
+
+common.mak
+config.inc
+errorsnd.inc
+infosnd.inc
+introsnd.inc
+neutralsnd.inc
+rightsnd.inc
+wrongsnd.inc
+quizhg.inc
+titimg.inc
+*.gpi
+*.gpm
+*.ppu
+cgiquiz
+diaquiz
+grquiz
+linequiz
+mkquiz
+gtkquizchooser
+scrquiz
+ppm2pas
+getquiz
+
+mkquiz.txt
+scrquiz.txt
+grquiz.txt
+akfquiz.txt
+cgiquiz.txt
+linequiz.txt
+gtkquizchooser.txt
+quizstat.txt
+diaquiz.txt
+mkquiz.html
+scrquiz.html
+grquiz.html
+akfquiz.html
+cgiquiz.html
+linequiz.html
+gtkquizchooser.html
+quizstat.html
+diaquiz.html
+mkquiz.pdf
+scrquiz.pdf
+grquiz.pdf
+akfquiz.pdf
+cgiquiz.pdf
+linequiz.pdf
+gtkquizchooser.pdf
+quizstat.pdf
+diaquiz.pdf
+
+*.res
+*.rc
+*.or
+innosetup.iss
+*.nsh
