put it under GPLv3 again (except akfquizweb)

--- a/Makefile.in
+++ b/Makefile.in
@@ -147,6 +147,7 @@ dist: distclean
 	      akfquiz/doc/english/linequiz.1 \
 	      akfquiz/doc/english/quizstat.1 \
 	      akfquiz/doc/deutsch/UPDATE \
+	      akfquiz/doc/deutsch/gpl-3.0.de.html \
 	      akfquiz/doc/deutsch/scrquiz.1 \
 	      akfquiz/doc/deutsch/akfquiz.5 \
 	      akfquiz/doc/deutsch/mkquiz.1 \
@@ -252,6 +253,7 @@ dist-bin: all
 	      akfquiz/doc/english/linequiz.1 \
 	      akfquiz/doc/english/quizstat.1 \
 	      akfquiz/doc/deutsch/UPDATE \
+	      akfquiz/doc/deutsch/gpl-3.0.de.html \
 	      akfquiz/doc/deutsch/scrquiz.1 \
 	      akfquiz/doc/deutsch/akfquiz.5 \
 	      akfquiz/doc/deutsch/mkquiz.1 \
