desktop files updated

--- a/desktop/scrquiz.desktop
+++ b/desktop/scrquiz.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Encoding=UTF-8
 Name=AKFQuiz: scrquiz
 Type=Application
-Exec=scrquiz
+Exec=scrquiz %f
 TryExec=scrquiz
 Icon=AKFQuiz.xpm
 Terminal=true
